Added Controls UI

--- a/New folder/Unity-Rollback/Assembly-CSharp.csproj
+++ b/New folder/Unity-Rollback/Assembly-CSharp.csproj
@@ -50,14 +50,15 @@
     <ImplicitlyExpandDesignTimeFacades>false</ImplicitlyExpandDesignTimeFacades>
   </PropertyGroup>
   <ItemGroup>
-     <Compile Include="Assets\Scripts\RollbackScripts\BasicPhysicalRewindable.cs" />
+     <Compile Include="Assets\Scripts\RewindSystem\BasicPhysicalRewindable.cs" />
      <Compile Include="Assets\Scripts\GunScripts\Bullet.cs" />
-     <Compile Include="Assets\Scripts\RollbackScripts\RewindManager.cs" />
-     <Compile Include="Assets\Scripts\RollbackScripts\PhysicalRewindableBase.cs" />
+     <Compile Include="Assets\Scripts\RewindSystem\RewindManager.cs" />
+     <Compile Include="Assets\Scripts\RewindSystem\PhysicalRewindableBase.cs" />
      <Compile Include="Assets\Scripts\GunScripts\Gun.cs" />
      <Compile Include="Assets\Scripts\PlayerScripts\PlayerRotationController.cs" />
      <Compile Include="Assets\Scripts\PlayerScripts\PlayerShootingController.cs" />
      <Compile Include="Assets\Scripts\PlayerScripts\PlayerInputController.cs" />
+     <Compile Include="Assets\Scripts\RewindSystem\RewindableBase.cs" />
  <Reference Include="Unity.Timeline.Editor">
  <HintPath>C:/Users/akbul/Desktop/workspace/Unity/Unity-Rollback/New folder/Unity-Rollback/Library/ScriptAssemblies/Unity.Timeline.Editor.dll</HintPath>
  </Reference>
